Modification du design de test + ajout de favicon

--- a/.phrozn/layouts/footer.twig
+++ b/.phrozn/layouts/footer.twig
@@ -1,6 +1,3 @@
-<footer id="mainFooter" class="footer">
-    <div class="container">
-        <p class="pull-right"><a href="#" title="Retour en haut de page">Retour en haut de page</a></p>
-        <p>♡2012 by Maxime AILLOUD. Copying is an act of love. Please copy.</p>
-    </div>
-</footer>
+            <footer>
+                <p>♡2012 by Maxime AILLOUD. Copying is an act of love. Please copy.</p>
+            </footer>
