--- a/.phrozn/layouts/topbar.twig
+++ b/.phrozn/layouts/topbar.twig
@@ -1,36 +1,20 @@
-<div class="topbar">
-    <div class="fill">
-        <div class="container">
-            <a class="brand" href="#">Phrozn</a>
-            <ul class="nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="about">About</a></li>
-                <li><a href="http://www.phrozn.info/en/documentation/">Documentation</a></li>
-            </ul>
-            <form action="http://www.google.ru/search?ie=UTF-8&" method="GET">
-                <input type="text" placeholder="Search" name="q" value="phrozn">
-                <button class="btn" type="submit">Go!</button>
-            </form>
-            <ul class="nav secondary-nav">
-                <li class="menu">
-                <a href="#" class="menu">Dropdown 1</a>
-                <ul class="menu-dropdown">
-                    <li><a href="#">Secondary link</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li class="divider"></li>
-                    <li><a href="#">Another link</a></li>
-                </ul>
-                </li>
-                <li class="menu">
-                <a href="#" class="menu">Dropdown 2</a>
-                <ul class="menu-dropdown">
-                    <li><a href="#">Secondary link</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li class="divider"></li>
-                    <li><a href="#">Another link</a></li>
-                </ul>
-                </li>
-            </ul>
+<div class="navbar navbar-fixed-top">
+            <div class="navbar-inner">
+                <div class="container-fluid">
+                    <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </a>
+                    <a class="brand" href="#">Project name</a>
+                    <div class="nav-collapse">
+                        <ul class="nav">
+                            <li class="active"><a href="#">Home</a></li>
+                            <li><a href="#about">About</a></li>
+                            <li><a href="#contact">Contact</a></li>
+                        </ul>
+                        <p class="navbar-text pull-right">Logged in as <a href="#">username</a></p>
+                    </div><!--/.nav-collapse -->
+                </div>
+            </div>
         </div>
-    </div>
-</div>
