Ajout d'un peu plus de texte pour les articles

--- a/.phrozn/layouts/default.twig
+++ b/.phrozn/layouts/default.twig
@@ -42,24 +42,22 @@
                             <h1>Nobis enim impedit esse.</h1>
                             <header>Publié le <time datetime="04-02-2012" pubdate="">04-02-2012</time> par luc.gomes</header>
                             <p>
-                                Sed quia nisi voluptate. Fugit et nobis expedita. Id sequi placeat sint. Asperiores quasi fugit quas.
-                                Sunt harum odit hic. Ducimus maiores dolores hic sint.
+                                Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression.
+                              Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son inclusion dans des applications de mise en page de texte, comme Aldus PageMaker.
                             </p>
                         </article>
                         <article id="post2">
                             <h1>Nobis enim impedit esse.</h1>
                             <header>Publié le <time datetime="04-02-2012" pubdate="">04-02-2012</time> par luc.gomes</header>
                             <p>
-                                Sed quia nisi voluptate. Fugit et nobis expedita. Id sequi placeat sint. Asperiores quasi fugit quas.
-                                Sunt harum odit hic. Ducimus maiores dolores hic sint.
+                                Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son inclusion dans des applications de mise en page de texte, comme Aldus PageMaker.
                             </p>
                         </article>
                         <article id="post3">
                             <h1>Nobis enim impedit esse.</h1>
                             <header>Publié le <time datetime="04-02-2012" pubdate="">04-02-2012</time> par luc.gomes</header>
                             <p>
-                                Sed quia nisi voluptate. Fugit et nobis expedita. Id sequi placeat sint. Asperiores quasi fugit quas.
-                                Sunt harum odit hic. Ducimus maiores dolores hic sint.
+                                Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son inclusion dans des applications de mise en page de texte, comme Aldus PageMaker.
                             </p>
                         </article>
                     </div>
@@ -75,4 +73,3 @@
 
     </body>
 </html>
-
