--- a/.phrozn/layouts/default.twig
+++ b/.phrozn/layouts/default.twig
@@ -35,34 +35,23 @@
                 </div>
             </header>
 
-            <section class="postList">
-                <div class="row">
-                    <div class="span12">
-                        <article id="post1">
-                            <h1>Nobis enim impedit esse.</h1>
-                            <header>Publié le <time datetime="04-02-2012" pubdate="">04-02-2012</time> par luc.gomes</header>
-                            <p>
-                                Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression.
-                              Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son inclusion dans des applications de mise en page de texte, comme Aldus PageMaker.
-                            </p>
-                        </article>
-                        <article id="post2">
-                            <h1>Nobis enim impedit esse.</h1>
-                            <header>Publié le <time datetime="04-02-2012" pubdate="">04-02-2012</time> par luc.gomes</header>
-                            <p>
-                                Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son inclusion dans des applications de mise en page de texte, comme Aldus PageMaker.
-                            </p>
-                        </article>
-                        <article id="post3">
-                            <h1>Nobis enim impedit esse.</h1>
-                            <header>Publié le <time datetime="04-02-2012" pubdate="">04-02-2012</time> par luc.gomes</header>
-                            <p>
-                                Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son inclusion dans des applications de mise en page de texte, comme Aldus PageMaker.
-                            </p>
-                        </article>
-                    </div>
-                </div>
-            </section>
+            <ul class="postList unstyled">
+                <li class="postTitle">
+                    <h1>Récupérer une partition de boot Windows 7<time datetime="04-02-2012" pubdate="" class="pubdate">04-02-2012</time></h1>
+                </li>
+                <li class="postTitle">
+                    <h1>Contrainte de validation de formulaire Symfony2<time datetime="04-02-2012" pubdate="" class="pubdate">04-02-2012</time></h1>
+                </li>
+                <li class="postTitle">
+                    <h1>Lecture réseau sur une PlayStation&reg;3<time datetime="04-02-2012" pubdate="" class="pubdate">04-02-2012</time></h1>
+                </li>
+                <li class="postTitle">
+                    <h1>Astuces Git<time datetime="04-02-2012" pubdate="" class="pubdate">04-02-2012</time></h1>
+                </li>
+                <li class="postTitle">
+                    <h1>Améliorer l'historique de votre terminal<time datetime="04-02-2012" pubdate="" class="pubdate">04-02-2012</time></h1>
+                </li>
+            </ul>
 
             <footer class="mainFooter">
                 <p class="pull-right"><a href="#">Back to top</a></p>
