--- a/.phrozn/styles/style.less
+++ b/.phrozn/styles/style.less
@@ -33,3 +33,66 @@
     padding:            35px 0 36px;
     border-top:         1px solid #E5E5E5;
 }
+
+/**** Post list ****/
+.postList
+{
+    .postTitle ~ .postTitle
+    {
+        margin-top: 10px;
+    }
+    h1
+    {
+        background:     #0C0D0E;
+        padding:        0 0 0 10px;
+        font-size:      16px;
+
+        /* Thickness of the bar more easily achieved with line-height
+        since padding would push link inward.  */
+        line-height:    2;
+
+        .pubdate
+        {
+            float:              right;
+            position:           relative;
+            text-decoration:    none;
+            padding:            0 10px 0 5px;
+            border-left:        5px solid #999;
+            background-color:   #999;
+            color:              black;
+        }
+
+        .pubdate:before, .pubdate:after
+        {
+            content:            "";
+            position:           absolute;
+            /* Pushed down half way, will get pulled back up half height of triangle
+            ensures centering if font-size or line-height changes */
+            top:                50%;
+            width:              0;
+            height:             0;
+        }
+
+        .pubdate:before
+        {
+            left:               -14px;
+            /* Triangle */
+            border-top:         11px solid transparent;
+            border-bottom:      11px solid transparent;
+            border-right:       11px solid #999;
+            /* Pull-up */
+            margin-top:         -11px;
+        }
+
+        .pubdate:after
+        {
+            /* Smaller and different position triangle */
+            left: -10px;
+            border-top: 6px solid transparent;
+            border-bottom: 6px solid transparent;
+            border-right: 6px solid white;
+            margin-top: -6px;
+        }
+    }
+}
+/**** Post list ****/
