--- a/.phrozn/layouts/header.twig
+++ b/.phrozn/layouts/header.twig
@@ -6,6 +6,7 @@
                     <ul class="nav nav-pills">
                       <li><a href="#">Articles</a></li>
                       <li><a href="#">Expérimentations</a></li>
+                      <li><a href="#">Contact</a></li>
                     </ul>
                 </div>
             </header>
