--- a/.phrozn/layouts/header.twig
+++ b/.phrozn/layouts/header.twig
@@ -1,6 +1,6 @@
 <header class="mainHeader">
                 <h1>Maxime AILLOUD</h1>
-                <p class="lead">L'apprentissage à mon service, et au vôtre</p>
+                <p class="lead">Attention chérie, ça va coder !!!</p>
 
                 <div class="subnav">
                     <ul class="nav nav-pills">
