Modification du copyheart du footer

--- a/.phrozn/layouts/footer.twig
+++ b/.phrozn/layouts/footer.twig
@@ -1,4 +1,4 @@
 <footer class="mainFooter">
                 <p class="pull-right"><a href="#">Back to top</a></p>
-                <p>♡2012 by Maxime AILLOUD. Copying is an act of love. Please copy.</p>
+                <p>♡2012 by Maxime AILLOUD.</p>
             </footer>
