--- a/.phrozn/styles/style.less
+++ b/.phrozn/styles/style.less
@@ -1,3 +1,9 @@
+body
+{
+    background-image: none;
+    background-color: #272B30;
+}
+
 .mainHeader
 {
     position:           relative;
@@ -32,6 +38,10 @@
     margin-top:         45px;
     padding:            35px 0 36px;
     border-top:         1px solid #E5E5E5;
+    a
+    {
+        color:              white;
+    }
 }
 
 /**** Post list ****/
