--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
+body {
+  background-image:none;
+  background-color:#272b30;
+}
 .mainHeader {
   position:relative;
   margin-top:30px;
@@ -23,6 +27,7 @@
   padding:35px 0 36px;
   border-top:1px solid #e5e5e5;
 }
+.mainFooter a { color:white; }
 .postList .postTitle ~ .postTitle { margin-top:10px; }
 .postList h1 {
   background:#0c0d0e;
