--- a/.phrozn/layouts/footer.twig
+++ b/.phrozn/layouts/footer.twig
@@ -1,4 +1,7 @@
 <footer class="mainFooter">
-                <p class="pull-right"><a href="#">Back to top</a></p>
+                <p class="pull-right">
+                    généré par <a href="http://www.phrozn.info/en/" title="Phrozn - Static Site Generator">Phrozn</a>
+                    | hébergé par <a href="https://www.alwaysdata.com/" title="L'h">alwaysdata</a>
+                </p>
                 <p>♡2012 by Maxime AILLOUD.</p>
             </footer>
