Suppression de liens pour des sections inexistantes

--- a/.phrozn/layouts/header.twig
+++ b/.phrozn/layouts/header.twig
@@ -4,9 +4,7 @@
 
                 <div class="subnav">
                     <ul class="nav nav-pills">
-                      <li><a href="#">Articles</a></li>
-                      <li><a href="#">Expérimentations</a></li>
-                      <li><a href="#">Contact</a></li>
+                      <li><a href="">Articles</a></li>
                     </ul>
                 </div>
             </header>
