--- a/styles/style.css
+++ b/styles/style.css
@@ -1,73 +1,96 @@
 body {
-  background-image:none;
-  background-color:#272b30;
+    background-image: none;
+    background-color: #272b30;
 }
 
 /**** Main header ****/
 .mainHeader {
-  position:relative;
-  margin-top:30px;
-  margin-bottom:35px;
+    position: relative;
+    margin-top: 30px;
+    margin-bottom: 35px;
 }
+
 .mainHeader .subnav {
-  width:100%;
-  height:36px;
+    width: 100%;
+    height: 36px;
 }
+
 .mainHeader .subnav .nav > li:first-child > a {
-  border-left:0;
-  padding-left:12px;
+    border-left: 0;
+    padding-left: 12px;
 }
+
 .mainHeader .subnav .nav > li > a {
-  margin:0;
-  padding-top:11px;
-  padding-bottom:11px;
-  border-radius:0px;
+    margin: 0;
+    padding-top: 11px;
+    padding-bottom: 11px;
+    border-radius: 0px;
+}
+
+.mainHeader .subnav .nav > li.active > a {
+    background: transparent;
+    border-bottom: 2px solid #33B5E5;
+    border-left: 1px solid #222;
+    color: white;
 }
 
 /**** Main footer ****/
 .mainFooter {
-  margin-top:45px;
-  padding:35px 0 36px;
-  border-top:1px solid #e5e5e5;
+    margin-top: 45px;
+    padding: 35px 0 36px;
+    border-top: 1px solid #e5e5e5;
 }
-.mainFooter a { color:white; }
+
+.mainFooter a {
+    color: white;
+}
 
 /**** Post list ****/
-.postList { padding-left:15px; }
-.postList .postTitle ~ .postTitle { margin-top:10px; }
+.postList {
+    padding-left: 15px;
+}
+
+.postList .postTitle ~ .postTitle {
+    margin-top: 10px;
+}
+
 .postList h1 {
-  background:#0c0d0e;
-  padding:0 0 0 10px;
-  font-size:16px;
-  line-height:2;
+    background: #0c0d0e;
+    padding: 0 0 0 10px;
+    font-size: 16px;
+    line-height: 2;
 }
+
 .postList h1 .pubdate {
-  float:right;
-  position:relative;
-  text-decoration:none;
-  padding:0 10px 0 5px;
-  border-left:5px solid #999999;
-  background-color:#999999;
-  color:black;
+    float: right;
+    position: relative;
+    text-decoration: none;
+    padding: 0 10px 0 5px;
+    border-left: 5px solid #999999;
+    background-color: #999999;
+    color: black;
 }
+
 .postList h1 .pubdate:before, .postList h1 .pubdate:after {
-  content:"";
-  position:absolute;
-  top:50%;
-  width:0;
-  height:0;
+    content: "";
+    position: absolute;
+    top: 50%;
+    width: 0;
+    height: 0;
 }
+
 .postList h1 .pubdate:before {
-  left:-14px;
-  border-top:11px solid transparent;
-  border-bottom:11px solid transparent;
-  border-right:11px solid #999999;
-  margin-top:-11px;
+    left: -14px;
+    border-top: 11px solid transparent;
+    border-bottom: 11px solid transparent;
+    border-right: 11px solid #999999;
+    margin-top: -11px;
 }
+
 .postList h1 .pubdate:after {
-  left:-10px;
-  border-top:6px solid transparent;
-  border-bottom:6px solid transparent;
-  border-right:6px solid white;
-  margin-top:-6px;
+    left: -10px;
+    border-top: 6px solid transparent;
+    border-bottom: 6px solid transparent;
+    border-right: 6px solid white;
+    margin-top: -6px;
 }
