Modification de la flêche au niveau de la date

--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ body {
     position: relative;
     text-decoration: none;
     padding: 0 10px 0 5px;
-    border-left: 5px solid #0088CC;
+    border-left: 5px solid #CCC;
     background-color: #0088CC;
     color: white;
 }
@@ -54,17 +54,17 @@ body {
 }
 
 .postList h1 .pubdate:before {
-    left: -16px;
-    border-top: 11px solid transparent;
-    border-bottom: 11px solid transparent;
-    border-right: 11px solid #0088CC;
-    margin-top: -11px;
+    left: -12px;
+    border-top: 12px solid transparent;
+    border-bottom: 12px solid transparent;
+    border-right: 12px solid #CCC;
+    margin-top: -12px;
 }
 
 .postList h1 .pubdate:after {
-    left: -11px;
-    border-top: 6px solid transparent;
-    border-bottom: 6px solid transparent;
-    border-right: 6px solid white;
-    margin-top: -6px;
+    left: -5px;
+    border-top: 5px solid transparent;
+    border-bottom: 5px solid transparent;
+    border-right: 5px solid #08C;
+    margin-top: -5px;
 }
