--- a/css/style.css
+++ b/css/style.css
@@ -2,18 +2,6 @@ body {
     background-color: #CCCCCC;
 }
 
-/**** Main header ****/
-.mainHeader {
-    margin-top: 30px;
-}
-
-/**** Main footer ****/
-.mainFooter {
-    margin-top: 45px;
-    padding-top: 15px;
-    border-top: 1px solid #888888;
-}
-
 /**** Post list ****/
 .postList {
     padding-left: 15px;
@@ -24,38 +12,63 @@ body {
 }
 
 .postList h1 {
-    background: #F5F5F5;
-    box-shadow: 5px 5px 5px #888;
-    padding: 0 0 0 10px;
-    font-size: 16px;
-    line-height: 2;
+    background:     #F5F5F5;
+    box-shadow:     5px 5px 5px #888;
+    padding:        0 0 0 10px;
+    font-size:      16px;
+    line-height:    2;
 }
 
-.postList h1:hover {
-    box-shadow: 10px 10px 10px #888;
+@media (max-width: 550px) {
+    .postList h1 .pubdate {
+        display:            block;
+        float:              none;
+        background-color:   inherit;
+        color:              #999;
+        font-size:          12px;
+    }
 }
 
-.postList h1 .pubdate {
-    float: right;
-    position: relative;
-    text-decoration: none;
-    padding: 0 10px 0 5px;
-    background-color: #0088CC;
-    color: white;
+@media (min-width: 551px) {
+    /**** Post list ****/
+    .postList h1 .pubdate {
+        display:            inline;
+        float:              right;
+        position:           relative;
+        text-decoration:    none;
+        padding:            0 10px 0 5px;
+        background-color:   #0088CC;
+        color:              white;
+    }
+    .postList h1:hover {
+        box-shadow: 10px 10px 10px #888;
+    }
+
+    .postList h1 .pubdate:before, .postList h1 .pubdate:after {
+        content:    "";
+        position:   absolute;
+        top:        50%;
+        width:      0;
+        height:     0;
+    }
+
+    .postList h1 .pubdate:after {
+        left:           -6px;
+        border-top:     6px solid transparent;
+        border-bottom:  6px solid transparent;
+        border-right:   6px solid #08C;
+        margin-top:     -6px;
+    }
 }
 
-.postList h1 .pubdate:before, .postList h1 .pubdate:after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    width: 0;
-    height: 0;
+/**** Main header ****/
+.mainHeader {
+    margin-top: 30px;
 }
 
-.postList h1 .pubdate:after {
-    left: -6px;
-    border-top: 6px solid transparent;
-    border-bottom: 6px solid transparent;
-    border-right: 6px solid #08C;
-    margin-top: -6px;
+/**** Main footer ****/
+.mainFooter {
+    margin-top:     45px;
+    padding-top:    15px;
+    border-top:     1px solid #888888;
 }
