Mise à jour après mise à jour du design + ajout de la page about

--- a/layout.twig
+++ b/layout.twig
@@ -3,32 +3,29 @@
     <head>
         <meta charset="utf-8">
         <title>Maxime AILLOUD</title>
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Blog de Maxime AILLOUD">
         <meta name="author" content="Maxime AILLOUD">
 
         <!-- styles -->
-        <link href="styles/bootstrap.css" rel="stylesheet">
-        <link href="styles/bootstrap-responsive.css" rel="stylesheet">
-        <link href="styles/style.css" rel="stylesheet">
+        <link href="css/bootstrap.css" rel="stylesheet">
+        <link href="css/bootstrap-responsive.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
 
         <!-- Le fav and touch icons -->
-        <link rel="shortcut icon" href="media/img/favicon.ico">
-        <link rel="apple-touch-icon" href="media/img/apple-touch-icon.png">
-        <link rel="apple-touch-icon" sizes="72x72" href="media/img/apple-touch-icon-72x72.png">
-        <link rel="apple-touch-icon" sizes="114x114" href="media/img/apple-touch-icon-114x114.png">
+        <link rel="shortcut icon" href="img/favicon.ico">
+        <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png">
     </head>
 
-    <body>
+    <body class="container">
 
-        <div class="container">
-            {% include 'templates/header.twig'%}
+        {% include 'templates/header.twig'%}
 
-            {{ content }}
+        {{ content }}
 
-            {% include 'templates/footer.twig'%}
-
-        </div>
+        {% include 'templates/footer.twig'%}
 
     </body>
 </html>
