--- a/templates/footer.twig
+++ b/templates/footer.twig
@@ -1,7 +1,8 @@
-<footer class="mainFooter row">
-                <div class="span4">♡2012 by Maxime AILLOUD</div>
-                <div class="span4 offset4">
-                    généré par <a href="http://www.phrozn.info/en/" title="Phrozn - Static Site Generator">Phrozn</a>
-                    | hébergé par <a href="https://www.alwaysdata.com/" title="L'h">alwaysdata</a>
-                </div>
-            </footer>
+<footer class="mainFooter">
+            <p class="pull-right"><a href="#">Back to top</a></p>
+            <p>♡2012 by Maxime AILLOUD</p>
+            <p>
+                généré par <a href="https://github.com/maxailloud/SG" title="SG - Static Site Generator">SG</a>
+                | hébergé par <a href="https://www.alwaysdata.com/" title="L'h">alwaysdata</a>
+            </p>
+        </footer>
