--- a/templates/header.twig
+++ b/templates/header.twig
@@ -1,10 +1,11 @@
 <header class="mainHeader">
-                <h1>Maxime AILLOUD</h1>
-                <p class="lead">Attention chérie, ça va coder !!!</p>
+            <h1>Maxime AILLOUD</h1>
+            <p class="lead">Attention chérie, ça va coder !!!</p>
 
-                <div class="subnav">
-                    <ul class="nav nav-pills">
-                      <li><a href="">Articles</a></li>
-                    </ul>
-                </div>
-            </header>
+            <div class="subnav">
+                <ul class="nav nav-pills">
+                  <li><a href="index.html">Articles</a></li>
+                  <li><a href="about.html">A propos</a></li>
+                </ul>
+            </div>
+        </header>
