--- a/.sg/layout.twig
+++ b/.sg/layout.twig
@@ -8,9 +8,7 @@
         <meta name="author" content="Maxime AILLOUD">
 
         <!-- styles -->
-        <link href="css/bootstrap.css" rel="stylesheet">
-        <link href="css/bootstrap-responsive.css" rel="stylesheet">
-        <link href="css/style.css" rel="stylesheet">
+        {{ stylesheets }}
 
         <!-- Le fav and touch icons -->
         <link rel="shortcut icon" href="img/favicon.ico">
