--- a/.sg/pages/about.twig
+++ b/.sg/pages/about.twig
@@ -1,6 +1,12 @@
-            <div class="row">
-                <div class="span10">
-                    <h2>A propos de moi</h2>
-                    <p>Du texte me présentant.</p>
-                </div>
+assets:
+    stylesheets:
+        - css/bootstrap-responsive.min.css
+        - css/bootstrap.min.css
+        - css/style.css
+===
+        <div class="row">
+            <div class="span10">
+                <h2>A propos de moi</h2>
+                <p>Du texte me présentant.</p>
             </div>
+        </div>
