Ajout de deux sites de tee

--- a/src/Resources/views/tee.html.twig
+++ b/src/Resources/views/tee.html.twig
@@ -15,6 +15,8 @@
         <li><a href="http://www.teefury.com/" title="http://www.teefury.com/">http://www.teefury.com/</a></li>
         <li><a href="http://www.qwertee.com/" title="http://www.qwertee.com/">http://www.qwertee.com/</a></li>
         <li><a href="http://www.neatoshop.com/" title="http://www.neatoshop.com/">http://www.neatoshop.com/</a></li>
+        <li><a href="http://www.welovefine.com/" title="http://www.welovefine.com/">http://www.welovefine.com/</a></li>
+        <li><a href="http://shirt.woot.com/" title="http://shirt.woot.com/">http://shirt.woot.com/</a></li>
     </ul>
 
     <a href="{{ path('homepage') }}">Retour</a>
